# mx-account-abstraction-rs

./: Cargo.toml  README.md
.github/workflows/: actions.yml  release.yml
account-abstraction/: Cargo.toml
account-abstraction/meta/: Cargo.toml
account-abstraction/meta/src/: main.rs
account-abstraction/src/: custom_callbacks.rs  lib.rs  own_proxy.rs  signature.rs  unique_payments.rs  users.rs
account-abstraction/src/common/: common_types.rs  custom_callbacks.rs  external_sc_interactions.rs  mod.rs  signature.rs  users.rs
account-abstraction/src/external_proxies/: farm_proxy.rs  mod.rs
account-abstraction/src/user_actions/: common_types.rs  execution.rs  intent_storage.rs  intents.rs  mod.rs  views.rs  whitelist_actions.rs
account-abstraction/tests/: acc_abstraction_test.rs  intent_test.rs  multi_action_test.rs  whitelist_test.rs
account-abstraction/tests/acc_abstraction_setup/: mod.rs
account-abstraction/wasm/: Cargo.toml
account-abstraction/wasm/src/: lib.rs
