[package]
name = "account-abstraction"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.50.1"

[dependencies.mergeable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c136244"

[dependencies.farm]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c136244"

[dependencies.config]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c136244"

[dependencies.common_structs]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c136244"

[dependencies.pausable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c136244"

[dependencies.farm-boosted-yields]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c136244"

[dependencies.weekly-rewards-splitting]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c136244"

[dependencies.energy-factory]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c136244"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.50.1"
